@@ -53,3 +53,9 @@ String Functions
 
         *New in FCTX 1.3.* Case insensitive version of
         :cfunc:`fctstr_incl`.
+
+.. cfunction:: fctstr_startswith(s1, check)
+
+        *New in FCTX 1.3*. Returns true (1) if the string, *s1*, starts
+        with the given string, *check*. This will treat two NULL values
+        as equal, and return true (1). 
